fixed some alignment issues with the search bar and search icon across different screen sizes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,7 +224,7 @@ img {
 .searchBar {
 	display: flex;
 	margin: 20% auto;
-	width: 50%;
+	width: 100%;
 	align-items: center;
 	justify-content: center;
 }
@@ -238,12 +238,14 @@ img {
 }
 
 .search {
-	width: 100%;
+	width: 20%;
+	display: flex;
+	justify-content: center;
 }
 
 .search-lite {
 	display: inline-flex;
-	/* width: 20%; */
+	width: 20%;
 	font-family: monospace;
 }
 
@@ -255,7 +257,7 @@ img {
 }
 
 .searchButton {
-	width: 20%;
+	width: 100%;
 	padding: 10px;
 	border-radius: 5px;
 	font-family: monospace;
@@ -269,9 +271,8 @@ img {
 }
 
 .searchButton:hover {
-	color: var(--lavender);
-	background-color: darkgray;
-	text-decoration: none;
+	color: var(--purewhite);
+	background-color: var(--midnightblack);
 	cursor: pointer;
 	transition: 0.5s;
 }
